--- a/GameFactoryWPF/TTT.xaml
+++ b/GameFactoryWPF/TTT.xaml
@@ -174,11 +174,13 @@
                 Height="30"
                 Kind="CircleOffOutline" />
         </Button>
+
         <Rectangle
             Grid.Row="0"
             Grid.RowSpan="3"
             Grid.Column="1"
             Width="1"
+            Margin="10"
             HorizontalAlignment="Right"
             Fill="Black" />
         <Rectangle
@@ -186,6 +188,7 @@
             Grid.RowSpan="3"
             Grid.Column="2"
             Width="1"
+            Margin="10"
             HorizontalAlignment="Right"
             Fill="Black" />
         <Rectangle
@@ -193,6 +196,7 @@
             Grid.Column="1"
             Grid.ColumnSpan="3"
             Height="1"
+            Margin="10"
             VerticalAlignment="Bottom"
             Fill="Black" />
         <Rectangle
@@ -200,7 +204,9 @@
             Grid.Column="1"
             Grid.ColumnSpan="3"
             Height="1"
+            Margin="10"
             VerticalAlignment="Bottom"
             Fill="Black" />
+
     </Grid>
 </UserControl>
